--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,3 +3,25 @@ body {
   background-color: white;
   margin: 30px;
   border-bottom: 2px solid red; }
+
+.navigation_menu {
+  /* Change the link color to #111 (black) on hover */ }
+  .navigation_menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333; }
+  .navigation_menu li {
+    float: left; }
+  .navigation_menu li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none; }
+  .navigation_menu li a:hover {
+    background-color: #111; }
+
+#img_main {
+  width: 100%; }
