--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -4,3 +4,35 @@ body {
 	margin: 30px;
 	border-bottom: 2px solid red;
 }
+
+// MENU
+.navigation_menu {
+	ul {
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		background-color: #333;
+	}
+
+	li {
+		float: left;
+	}
+
+	li a {
+		display: block;
+		color: white;
+		text-align: center;
+		padding: 14px 16px;
+		text-decoration: none;
+	}
+
+	/* Change the link color to #111 (black) on hover */
+	li a:hover {
+		background-color: #111;
+	}
+}
+
+#img_main {
+	width: 100%
+;}
